Fixed Last Damage not showing on the Hud

--- a/code/Resource/Styles/hud.scss
+++ b/code/Resource/Styles/hud.scss
@@ -144,7 +144,7 @@ vitals {
     }
 }
 
-.inventory, gamehud, dashcount, lastdamage {
+.inventory, gamehud, dashcount {
     padding: 0px;
     margin: 0px;
     font-size: 72px;
@@ -165,16 +165,19 @@ dashcount, lastdamage {
 }
 
 lastdamage {
-    top: 14px;
-    font-size: 32px;
-    right: 100%;
+    top: 100px;
+    font-size: 64px;
+    left: 200px;
     color: #f20;
     transition: all 0.1s ease-in;
-    transform: scale( 1 );
+    transform: scale( 1 ) skew(0deg, -5deg);
+    position: absolute;
+    font-weight: bolder;
+    font-family: Teko-SemiBold;
 
     &.nodmg {
-        opacity: 0;
-        transform: scale( 0 );
+        opacity: 1;
+        transform: scale( 0 ) skew(0deg, -5deg);
         transition: all 0.1s ease-out;
     }
 }
